--- a/src/systems/optical_flow/CMakeLists.txt
+++ b/src/systems/optical_flow/CMakeLists.txt
@@ -5,4 +5,5 @@ gz_add_system(optical-flow
     gz-common${GZ_COMMON_VER}::gz-common${GZ_COMMON_VER}
     gz-rendering${GZ_RENDERING_VER}::gz-rendering${GZ_RENDERING_VER}
     gz-sim${PROJECT_VERSION_MAJOR}-rendering
+    gz-sensors${GZ_SENSORS_VER}::camera
 )
