--- a/src/systems/optical_flow/CMakeLists.txt
+++ b/src/systems/optical_flow/CMakeLists.txt
@@ -1,3 +1,5 @@
+find_package(OpenCV)
+
 gz_add_system(optical-flow
   SOURCES
     OpticalFlow.cc
@@ -6,4 +8,5 @@ gz_add_system(optical-flow
     gz-rendering${GZ_RENDERING_VER}::gz-rendering${GZ_RENDERING_VER}
     gz-sim${PROJECT_VERSION_MAJOR}-rendering
     gz-sensors${GZ_SENSORS_VER}::camera
+    ${OpenCV_LIBS}
 )
