--- a/src/systems/CMakeLists.txt
+++ b/src/systems/CMakeLists.txt
@@ -121,6 +121,7 @@ add_subdirectory(follow_actor)
 add_subdirectory(force_torque)
 add_subdirectory(hydrodynamics)
 add_subdirectory(imu)
+add_subdirectory(icd)
 add_subdirectory(joint_controller)
 add_subdirectory(joint_position_controller)
 add_subdirectory(joint_state_publisher)
